# tif22pnm

./: .gitignore  Makefile  README  aclocal.m4  cc_help.sh.in  compile_png22pnm_darwinc32.sh  compile_png22pnm_darwinc64.sh  compile_png22pnm_mingw.sh  compile_png22pnm_xstatic.sh  config.h.in  configure  configure.in  do.sh  files  minigimp.c  minigimp.h  miniglib.c  miniglib.h  png22pnm.c  ptspnm.c  ptspnm.h  ptstiff3.c  ptstiff3.h  tif22pnm.c
debian/: README.debian  changelog  control  copyright  crontab.ex  files  inetd.conf.ex  info.ex  init.d.ex  manpage.1.ex  menu.ex  png22pnm.docs  png22pnm.files  png22pnm.substvars  rules  substvars  tif22pnm.files  watch.ex
